[gd_scene load_steps=7 format=4 uid="uid://hr1l3ilyeks8"]

[ext_resource type="Script" uid="uid://qowrtfgyop7j" path="res://objects/pipes.gd" id="1_og227"]
[ext_resource type="Texture2D" uid="uid://eyvuya6ki3cd" path="res://assets/Tiles/Style 1/PipeStyle1.png" id="1_r1kwc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_og227"]
texture = ExtResource("1_r1kwc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSet" id="TileSet_l4tgv"]
sources/0 = SubResource("TileSetAtlasSource_og227")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq3k0"]
size = Vector2(32, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_og227"]
size = Vector2(15.75, 512)

[node name="Pipes" type="Node2D" groups=["pipes"]]
script = ExtResource("1_og227")

[node name="PipeUp" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="PipeUp"]
tile_map_data = PackedByteArray("AAD/////AAAAAAQAAAAAAP//AAABAAQAAAD///7/AAAAAAMAAAAAAP7/AAABAAMAAAD///3/AAAAAAIAAAAAAP3/AAABAAIAAAD///z/AAAAAAIAAAAAAPz/AAABAAIAAAD///v/AAAAAAIAAAAAAPv/AAABAAIAAAD///r/AAAAAAIAAAAAAPr/AAABAAIAAAD///n/AAAAAAIAAAAAAPn/AAABAAIAAAD///j/AAAAAAIAAAAAAPj/AAABAAIAAAD///f/AAAAAAIAAAAAAPf/AAABAAIAAAD///b/AAAAAAIAAAAAAPb/AAABAAIAAAD///X/AAAAAAIAAAAAAPX/AAABAAIAAAD///T/AAAAAAIAAAAAAPT/AAABAAIAAAD///P/AAAAAAIAAAAAAPP/AAABAAIAAAD///L/AAAAAAIAAAAAAPL/AAABAAIAAAD///H/AAAAAAIAAAAAAPH/AAABAAIAAAD///D/AAAAAAIAAAAAAPD/AAABAAIAAAA=")
tile_set = SubResource("TileSet_l4tgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeUp"]
position = Vector2(0, -128)
shape = SubResource("RectangleShape2D_nq3k0")

[node name="PipeDown" type="Area2D" parent="."]
scale = Vector2(1, -1)
metadata/_edit_group_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="PipeDown"]
tile_map_data = PackedByteArray("AAD/////AAAAAAQAAAAAAP//AAABAAQAAAD///7/AAAAAAMAAAAAAP7/AAABAAMAAAD///3/AAAAAAIAAAAAAP3/AAABAAIAAAD///z/AAAAAAIAAAAAAPz/AAABAAIAAAD///v/AAAAAAIAAAAAAPv/AAABAAIAAAD///r/AAAAAAIAAAAAAPr/AAABAAIAAAD///n/AAAAAAIAAAAAAPn/AAABAAIAAAD///j/AAAAAAIAAAAAAPj/AAABAAIAAAD///f/AAAAAAIAAAAAAPf/AAABAAIAAAD///b/AAAAAAIAAAAAAPb/AAABAAIAAAD///X/AAAAAAIAAAAAAPX/AAABAAIAAAD///T/AAAAAAIAAAAAAPT/AAABAAIAAAD///P/AAAAAAIAAAAAAPP/AAABAAIAAAD///L/AAAAAAIAAAAAAPL/AAABAAIAAAD///H/AAAAAAIAAAAAAPH/AAABAAIAAAD///D/AAAAAAIAAAAAAPD/AAABAAIAAAA=")
tile_set = SubResource("TileSet_l4tgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeDown"]
position = Vector2(0, -128)
shape = SubResource("RectangleShape2D_nq3k0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(30, 0)

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(8.125, 0)
shape = SubResource("RectangleShape2D_og227")
debug_color = Color(0.843137, 0.337255, 0.392157, 0.662745)

[connection signal="body_entered" from="PipeUp" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="PipeDown" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
